<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/news_type_top"
        android:entries="@array/settings_type_options"
        android:entryValues="@array/settings_type_options"
        android:key="@string/settings_type_key"
        android:title="@string/settings_type_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_read_indicator_key"
        android:summaryOff="@string/settings_read_indicator_disabled"
        android:summaryOn="@string/settings_read_indicator_enabled"
        android:title="@string/settings_read_indicator_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_history_key"
        android:summaryOff="@string/settings_history_disabled"
        android:summaryOn="@string/settings_history_enabled"
        android:title="@string/settings_history_title" />
</PreferenceScreen>
