<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_app_logo"
            android:padding="@dimen/view_margin"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/view_margin"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/ib_news_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/desc_refresh_widget"
            android:padding="@dimen/view_margin"
            android:src="@drawable/ic_sync"
            android:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/ib_news_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/desc_go_to_app"
            android:padding="@dimen/view_margin"
            android:src="@drawable/ic_home"
            android:tint="@android:color/white" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/view_margin">

        <ListView
            android:id="@+id/lv_news_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorDivider"
            android:dividerHeight="@dimen/divider_height"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </FrameLayout>
</LinearLayout>