<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.marcelljee.hackernews.databinding.viewmodel.ItemViewModel" />

        <variable
            name="item"
            type="com.marcelljee.hackernews.model.Item" />

        <variable
            name="itemPosition"
            type="Integer" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        app:selected="@{item.selected}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/text_spacing"
            android:paddingTop="@dimen/text_spacing"
            android:visibility="@{item.notDeleted &amp;&amp; item.notDead}">

            <FrameLayout
                android:id="@+id/sv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.marcelljee.hackernews.view.ScoreView
                    android:layout_width="@dimen/score_size"
                    android:layout_height="@dimen/score_size"
                    android:layout_margin="@dimen/view_margin"
                    android:text="@{String.valueOf(item.getScore())}"
                    android:visibility="@{!item.selected}"
                    app:read="@{viewModel.readIndicatorEnabled &amp;&amp; item.read}" />

                <com.marcelljee.hackernews.view.CheckedScoreView
                    android:layout_width="@dimen/score_size"
                    android:layout_height="@dimen/score_size"
                    android:layout_margin="@dimen/view_margin"
                    android:contentDescription="@string/desc_selected_item"
                    android:visibility="@{item.selected}"
                    app:read="@{viewModel.readIndicatorEnabled &amp;&amp; item.read}" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:onClick="@{() -> viewModel.userClick(item.by)}"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/text_spacing"
                    android:paddingEnd="@dimen/view_margin"
                    android:paddingStart="@dimen/view_margin"
                    android:paddingTop="@dimen/text_spacing">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/view_margin"
                        android:layout_marginRight="@dimen/view_margin"
                        android:text="@{item.by}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        app:weekRelativeDate="@{item.time}" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_news_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:onClick="@{() -> viewModel.textClick(itemPosition)}"
                    android:paddingBottom="@dimen/text_spacing"
                    android:paddingEnd="@dimen/view_margin"
                    android:paddingStart="@dimen/view_margin"
                    android:paddingTop="@dimen/text_spacing"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    app:title="@{item}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_spacing"
                    android:paddingEnd="@dimen/view_margin"
                    android:paddingStart="@dimen/view_margin"
                    android:paddingTop="@dimen/text_spacing"
                    android:text="@{@plurals/total_comments(item.descendants, item.descendants)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:visibility="@{item.getDescendants() > 0}" />
            </LinearLayout>

            <com.marcelljee.hackernews.view.BookmarkView
                android:id="@+id/ib_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/desc_bookmark"
                android:onClick="@{() -> viewModel.bookmarkClick(item)}"
                android:padding="@dimen/view_margin"
                app:bookmarked="@{item.bookmarked}" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_margin"
            android:text="@string/text_deleted"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{item.deleted}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_margin"
            android:text="@string/text_dead"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="@{item.dead &amp;&amp; !item.deleted}" />
    </FrameLayout>
</layout>